# carlinkit-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.emb/: base.emb.yaml  raspberry-pi.emb.yaml
docs/: ARCHITECTURE.md  AUDIO_DUCKING.md
scripts/: 99-carlinkit.rules  capture-usb.sh  cycle-drm-modes.sh  find-device.sh  install-udev-rule.sh
src/: audio_alsa.cpp  audio_alsa.h  config_env.h  decode_probe.cpp  decoder_source.cpp  decoder_source.h  dongle.cpp  dongle.h  dongle_manager.cpp  dongle_manager.h  drm_dump.cpp  gl_rotate_source.cpp  gl_rotate_source.h  input_touch.h  main.cpp  main_audio.cpp  main_kms.cpp  main_wayland.cpp  native_frame.h  protocol.h  software_decoder_source.cpp  software_decoder_source.h  stream_parser.h  usb_device.cpp  usb_device.h  v4l2_decoder_source_adapter.cpp  v4l2_decoder_source_adapter.h  vaapi_decoder.cpp  vaapi_decoder.h  vaapi_decoder_source.cpp  vaapi_decoder_source.h  wayland_shm_sink.cpp  wayland_shm_sink.h  wayland_sink.cpp  wayland_sink.h
